Fixed font spacing for my name

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -571,7 +571,7 @@ a:hover {
     #header h1 {
         font-size: 4.35em;
         font-weight: 900;
-        letter-spacing: 0.001em;
+        letter-spacing: 0.02em;
         line-height: 1em;
     }
 
